unpackaged/objects/TorneioEstrutura__c.object
<CustomObject>
    <fields>
        <fullName>Descricao__c</fullName>
        <label>Descrição</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NivelAddOn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nível Add On</label>
        <referenceTo>TorneioNivel__c</referenceTo>
        <relationshipLabel>NivelAddOn</relationshipLabel>
        <relationshipName>Torneios_Estrururas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NivelRebuy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nível Rebuy</label>
        <referenceTo>TorneioNivel__c</referenceTo>
        <relationshipLabel>Torneios Estrururas (Nível Rebuy)</relationshipLabel>
        <relationshipName>NivelRebuy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NivelTimeChip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nível Time Chip</label>
        <referenceTo>TorneioNivel__c</referenceTo>
        <relationshipLabel>Torneios Estrururas (Nível Time Chip)</relationshipLabel>
        <relationshipName>NivelTimeChip</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StackAddOn__c</fullName>
        <label>Stack Add On</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StackBuyIn__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Stack Buy In</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StackTimeChip__c</fullName>
        <label>Stack Time Chip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TempoBlinds__c</fullName>
        <label>Tempo Blinds</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                    <default>true</default>
                    <label>25</label>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Torneio Estrutura</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NivelAddOn__c</columns>
        <columns>NivelRebuy__c</columns>
        <columns>NivelTimeChip__c</columns>
        <columns>StackAddOn__c</columns>
        <columns>StackBuyIn__c</columns>
        <columns>StackTimeChip__c</columns>
        <columns>TempoBlinds__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Nome da Estrutura</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Torneios Estrururas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>